--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -80,3 +80,12 @@
 .view-profile {
   text-align: center;
 }
+.profile-name{
+  margin: 20px 0 5px 0;
+  padding: 2px;
+}
+
+.profile-details{
+  margin: 0 auto;
+  padding: 2px;
+}
