--- a/app/assets/stylesheets/stylesheet.scss
+++ b/app/assets/stylesheets/stylesheet.scss
@@ -139,37 +139,11 @@ textarea, input { outline: none; }
 .profile-card {
   box-sizing: border-box;
 }
-// .search {
-//   width: 320px;
-//   height: 40px;
-//   font: $font;
-//   padding: 5px;
-//   border-style: none;
-//   border-radius: 4px 0 0 4px;
-//   background-color: $light-gray;
-//   margin: 0 auto;
-// }
-// .search-button {
-//   background-color: $accent-color-dark;
-//   height:40px;
-//   // font-size: $font;
-//   color: $white;
-//   border-radius: 0 4px 4px 0;
-//   border: none;
-//   // height: 1em;
-//   padding: 5px;
-//   margin: 4px -10px 0px 0px;
-// }
-// .search-button:hover {
-//   background-color: $accent-color-dark;
-// }
 
 col-md-3 {
   border: 1px black solid;
 }
-// .icon-row {
-//   width: 20px;
-// }
+
 .icon-mail {
   font-size: 25px;
   padding: 1px;
@@ -183,16 +157,15 @@ col-md-3 {
   text-align: center;
   font-family: $font;
   background-color: lightgrey;
-  margin-bottom: 10px;
-
+  // padding-left: 20px;
+  // margin-right: 20px;
+  margin-bottom: 30px;
+  // margin-left: 8.33%;
+  // padding: 5%;
   font-color: black;
   box-sizing: border-box;
 }
-// .label-column {
-//   display: block;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
+
 .profile-page {
   font-family: $font-bold-italic;
   // font-size: 2em;
@@ -209,6 +182,7 @@ col-md-3 {
   margin-bottom: 20px;
   text-align: center;
 }
+
 .error>li {
   list-style-type: none;
   font-style: italic;
@@ -228,48 +202,16 @@ col-md-3 {
 }
 .icon {
   font-size: 35px;
-
   padding: 1.5px;
   color: $medium-gray;
   margin-bottom: 0;
 }
-.search-bar {
-  border-top: solid thin black;
-  border-bottom: solid thin black;
-  width: 100%;
-  margin-bottom: 30px;
 
-}
 
 .spacer{
   margin-bottom: 2em;
 }
-.search {
-  width: 320px;
-  height: 50px;
-  font: $font;
-  padding: 5px;
-  border-style: none;
-  border-radius: 4px 0 0 4px;
-  background-color: $light-gray;
-  margin: 4px;
-  margin-left: 6%;
 
-}
-.search-button {
-  background-color: $accent-color-dark;
-  // margin-top: 10px;
-  color: $white;
-  font: $font;
-  height: 50px;
-  border-radius: 0 4px 4px 0;
-  border: none;
-  padding: 5px;
-  margin-left: -10px;
-}
-.search-button:hover {
-  background-color: $accent-color-light;
-}
 
 
 // forms override default color
@@ -279,11 +221,11 @@ col-md-3 {
 //     color: #FFF;
 // }
 
-.form-bk{
-  background-color: $form;
-
-
-}
+// .form-bk{
+//   background-color: $form;
+//
+//
+// }
 .name{
   background-color: white;
   border-radius: $corners;
